; ModuleID = '/home/carl/AnghaBench/Atlas/lib/extr_glib2.c_lua_g_checksum_md5.c'
source_filename = "/home/carl/AnghaBench/Atlas/lib/extr_glib2.c_lua_g_checksum_md5.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@G_CHECKSUM_MD5 = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @lua_g_checksum_md5 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @lua_g_checksum_md5(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i64, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %6 = load i32*, i32** %2, align 8
  %7 = call i8* @luaL_checklstring(i32* %6, i32 1, i64* %3)
  store i8* %7, i8** %4, align 8
  %8 = load i32, i32* @G_CHECKSUM_MD5, align 4
  %9 = call i32* @g_checksum_new(i32 %8)
  store i32* %9, i32** %5, align 8
  %10 = load i32*, i32** %5, align 8
  %11 = load i8*, i8** %4, align 8
  %12 = bitcast i8* %11 to i32*
  %13 = load i64, i64* %3, align 8
  %14 = call i32 @g_checksum_update(i32* %10, i32* %12, i64 %13)
  %15 = load i32*, i32** %2, align 8
  %16 = load i32*, i32** %5, align 8
  %17 = call i32 @g_checksum_get_string(i32* %16)
  %18 = call i32 @lua_pushstring(i32* %15, i32 %17)
  %19 = load i32*, i32** %5, align 8
  %20 = call i32 @g_checksum_free(i32* %19)
  ret i32 1
}

declare dso_local i8* @luaL_checklstring(i32*, i32, i64*) #1

declare dso_local i32* @g_checksum_new(i32) #1

declare dso_local i32 @g_checksum_update(i32*, i32*, i64) #1

declare dso_local i32 @lua_pushstring(i32*, i32) #1

declare dso_local i32 @g_checksum_get_string(i32*) #1

declare dso_local i32 @g_checksum_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
